Fix of button whitespace

--- a/src/sass/base/_utilities.scss
+++ b/src/sass/base/_utilities.scss
@@ -12,6 +12,7 @@
 
 .btn-base {
   word-break: keep-all;
+  white-space: nowrap;
   cursor: pointer;
   text-decoration: none;
 }
